--- a/style.css
+++ b/style.css
@@ -487,6 +487,7 @@ h1, h2, h3, h4, h5, h6, p {
     object-fit: cover;
     object-position: center;
     max-width: 300px;
+    margin-left: 1rem;
 }
 
 .news .content .card p {
@@ -515,6 +516,7 @@ h1, h2, h3, h4, h5, h6, p {
     .news .content .card img {
         float: none;
         margin-bottom: 1rem;
+        margin-left: 0;
     }
 
     .news .content .card .content {
